# exordium

./: .buildinfo  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  codecov.yml  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py
.doctrees/: index.doctree
.doctrees/autoapi/: index.doctree
.doctrees/autoapi/exordium/: index.doctree
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: branch-guard.yml  cd.yml  ci.yml  codeql.yml  docs.yml  release-please.yml
_modules/: index.html
_modules/exordium/audio/: base.html  clap.html  emotion2vec.html  io.html  prosody.html  spectrogram.html  wav2vec2.html  wavlm.html
_modules/exordium/text/: alignment.html  base.html  bert.html  eurobert.html  mmbert.html  roberta.html  whisper.html  whisperx_align.html  xlm_roberta.html  xml_roberta.html
_modules/exordium/utils/: ckpt.html  concurrent.html  decorator.html  device.html  loss.html  normalize.html  padding.html
_sources/: index.rst.txt
_sources/autoapi/: index.rst.txt
_sources/autoapi/exordium/: index.rst.txt
autoapi/: index.html
autoapi/exordium/: index.html
autoapi/exordium/audio/: index.html
autoapi/exordium/text/: index.html
autoapi/exordium/utils/: index.html
autoapi/exordium/video/: index.html
data/: mean_std_fi.pkl
db/: big5.py
docs/: conf.py  index.rst
examples/: demo_audio.ipynb  demo_text.ipynb  demo_text_alignment.ipynb  demo_video_deep.ipynb  demo_video_deep_face.ipynb  demo_video_face_action_units.ipynb  demo_video_face_bb.ipynb  demo_video_face_blink.ipynb  demo_video_face_gaze.ipynb  demo_video_face_iris.ipynb  demo_video_face_landmarks.ipynb  demo_video_io.ipynb  demo_video_protagonist.ipynb  demo_video_tracking.ipynb
exordium/: __init__.py  shared.py
exordium/audio/: base.py  clap.py  convert.py  emotion2vec.py  io.py  opensmile.py  prosody.py  pyaa.py  smile.py  spectrogram.py  trillsson5.py  tts.py  wav2vec.py  wav2vec2.py  wavlm.py
exordium/dnn/: augmentation.py  bert.py  fabnet.py  norm.py  r2plus1d.py  roberta.py  wav2vec.py  wav2vec2.py
exordium/graph/: graph.py
exordium/preprocess/: shared.py
exordium/preprocess/audio/: convert.py  opensmile.py  pyaa.py  spectrogram.py  tts.py
exordium/preprocess/graph/: graph.py
exordium/preprocess/image/: face.py  pose.py  transform.py
exordium/preprocess/text/: tokenize.py  tokenizer.py
exordium/preprocess/video/: bb.py  dynimg.py  face.py  frames.py  headpose.py  openface.py  retinaface.py  tracker.py
exordium/text/: alignment.py  base.py  bert.py  eurobert.py  evaluation.py  mmbert.py  pipeline.py  roberta.py  tokenizer.py  transcript_align.py  whisper.py  whisperx_align.py  xlm_roberta.py  xml_roberta.py
exordium/utils/: augmentation.py  ckpt.py  concurent.py  concurrent.py  decorator.py  device.py  eval.py  extract_features.py  loss.py  norm.py  normalize.py  optimization.py  padding.py  reader.py  shared.py  train.py  transforms.py  visualization.py
exordium/video/: __init__.py  bb.py  blur.py  bodypose.py  clip.py  detection.py  dynimg.py  emonet.py  emotion.py  fabnet.py  face.py  facedetector.py  facemesh.py  frames.py  gaze.py  headpose.py  io.py  iris.py  irislandmarks.py  l2csnet.py  openface.py  opengraphau.py  pose.py  r2plus1d.py  resnet.py  retinaface.py  rvm.py  swin_transformers.py  tddfa_v2.py  tracker.py  transform.py
exordium/video/core/: __init__.py  bb.py  blur.py  densify.py  detection.py  io.py  tracker.py  transform.py
exordium/video/deep/: __init__.py  adaface.py  base.py  clip.py  dinov2.py  emotieffnet.py  fabnet.py  farl.py  marlin.py  resnet.py  swin.py  swint.py
exordium/video/face/: __init__.py  headpose.py  transform.py
exordium/visualization/: gaze.py  graph.py  headpose.py  landmarks.py  saliency.py  table.py
test/: script_clap.py  script_l2csnet.py  script_preprocess_multispeaker_720p.py  test_bb_module.py  test_bert.py  test_detection_class.py  test_emonet.py  test_fabnet.py  test_face_detector.py  test_framedetections_class.py  test_loss.py  test_r2plus1d.py  test_roberta.py  test_smile.py  test_tddfa_v2.py  test_track_class.py  test_tracker_class.py  test_videodetections_class.py  test_wav2vec.py  test_xml_roberta.py
test/preprocess/video/: test_face.py  test_head.py
test/video/: test_3ddfa_v2.py  test_face.py  test_head.py
tests/: __init__.py
tests/audio/: test_audio_wrappers.py  test_base.py  test_emotion2vec.py  test_io.py  test_prosody.py  test_smile.py  test_spectrogram.py
tests/fixtures/: __init__.py
tests/test_audio/: test_base.py  test_clap.py  test_io.py  test_prosody.py  test_smile.py  test_spectrogram.py  test_wav2vec2.py  test_wavlm.py
tests/test_text/: test_bert.py  test_roberta.py  test_whisper.py  test_xml_roberta.py
tests/test_utils/: test_ckpt.py  test_concurrent.py  test_decorator.py  test_device.py  test_loss.py  test_normalize.py  test_padding.py  test_transforms.py
tests/test_video/core/: test_bb.py  test_blur.py  test_detection.py  test_io.py  test_tracker.py
tests/test_video/deep/: test_base.py  test_clip.py  test_fabnet.py  test_resnet.py  test_swin.py
tests/test_video/face/: test_headpose.py  test_transform.py
tests/text/: test_alignment.py  test_base.py  test_eurobert.py  test_evaluation.py  test_mmbert.py  test_pipeline.py  test_transcript_align.py  test_whisperx_align.py  test_wrappers.py  test_xlm_roberta.py
tests/utils/: test_ckpt.py  test_concurrent.py  test_decorator.py  test_device.py  test_loss.py  test_normalize.py  test_padding.py  test_weight_availability.py
tests/video/core/: test_bb.py  test_bb_output_path.py  test_densify.py  test_detection.py  test_io.py  test_transform.py
tests/video/deep/: test_adaface.py  test_base.py  (+7 more)
utils/dnn/: __init__.py  extract_features.py  optimization.py  resnets.py
utils/preprocess/: __init__.py  audio.py  image.py  shared.py  text.py  video.py
(+248 files in other folders)
