[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "exordium"
dynamic = ["version"]
description = "Collection of utility tools and deep learning methods for multimodal feature extraction."
keywords = ["preprocess", "audio", "video", "text", "utils", "multimodal", "detection", "tracking"]
authors = [
  { name = "fodorad", email = "fodorad201@gmail.com" },
]
readme = {"file" = "README.md", "content-type" = "text/markdown"}
requires-python = ">=3.13"
license = "MIT"
classifiers = [
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "numpy",
  "opencv-python",
  "scipy",
  # ── PyTorch ecosystem version pins ───────────────────────────────────────────
  # torch, torchaudio, torchvision, and torchcodec must all be pinned together.
  #
  # torchcodec ships pre-compiled native extensions (.so / .dylib) that are
  # linked against a specific c10::MessageLogger C++ ABI from libc10.  This ABI
  # is NOT stable across PyTorch minor releases:
  #
  #   torch 2.6 – 2.9  →  MessageLogger(const char*, int, int)          ← PKcii
  #   torch 2.10 PyPI   →  MessageLogger(c10::SourceLocation, int, bool) ← incompatible
  #   torch 2.11 PyPI   →  MessageLogger(c10::SourceLocation, int, bool) ← incompatible
  #
  # torchcodec 0.9.x was compiled against the 2.9 ABI (PKcii) and works with
  # PyPI torch 2.9.1.  torchcodec 0.10.x targets a non-PyPI whl-index build of
  # torch 2.10 that has a fourth bool parameter (PKciib) — it does NOT match
  # the standard PyPI torch 2.10 or 2.11 releases.
  #
  # To upgrade: wait for a torchcodec release that explicitly targets a stable
  # PyPI torch ≥ 2.10, then bump all four pins together.
  # ─────────────────────────────────────────────────────────────────────────────
  "torch==2.11.0",
  "torchaudio==2.9.1",
  "torchvision==0.24.1",
  "torchcodec==0.9.1",
  "tqdm",
  "matplotlib",
  "huggingface_hub",
  "transformers",
  "safetensors",
]

[project.optional-dependencies]
audio = [
  "opensmile",
  "torchaudio",
]
text = [
  "transformers",
  "torchaudio",
]
video = [
  "mediapipe",
  "ultralytics",
  "blinklinmult",
  "unigaze",
  "timm",
  "marlin-pytorch",
  "einops",
]
dev = [
  "ruff",
  "ty",
  "coverage",
  "pre-commit",
]
docs = [
  "sphinx>=8.0",
  "furo",
  "sphinx-autoapi",
  "sphinx-autobuild",
  "myst-parser",
]
all = [
  "exordium[audio,video,text]",
]

[project.urls]
Documentation = "https://fodorad.github.io/exordium/"
Issues = "https://github.com/fodorad/exordium/issues"
Source = "https://github.com/fodorad/exordium"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["exordium"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "TCH", "ARG", "PIE", "D"]
ignore = [
  "D107",  # Missing docstring in __init__ (covered by class docstring)
  "D203",  # Blank line before class (conflicts with D211)
  "D213",  # Multi-line summary second line (conflicts with D212)
]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["D104"]
"tests/**/test_*.py" = ["D", "S", "ARG"]
"docs/conf.py" = ["D", "ARG"]
"examples/*.ipynb" = ["D", "E501", "E741"]

[tool.coverage.run]
source = ["exordium"]
omit = [
  "*/tests/*",
  "*/__init__.py",
]

[tool.coverage.report]
fail_under = 95
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "coverage_html"

[tool.uv]
override-dependencies = [
  "timm>=1.0",  # unigaze pins timm==0.3.2; override it
]

[tool.ty.environment]
python-version = "3.13"
