[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "exordium"
dynamic = ["version"]
description = "Collection of utility tools and deep learning methods for multimodal feature extraction."
keywords = ["preprocess", "audio", "video", "text", "utils", "multimodal", "detection", "tracking"]
authors = [
  { name = "fodorad", email = "fodorad201@gmail.com" },
]
readme = {"file" = "README.md", "content-type" = "text/markdown"}
requires-python = ">=3.13"
license = "MIT"
classifiers = [
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "numpy",
  "opencv-python",
  "scipy",
  # ── PyTorch ecosystem version pins ───────────────────────────────────────────
  # torch, torchaudio, torchvision and torchcodec are pinned as one matched set and
  # are only ever bumped together -- see the dependabot group in .github/dependabot.yml.
  #
  # torchvision is ABI-coupled to torch and hard-pins it (0.26 -> torch==2.11,
  # 0.28 -> torch==2.13). Bumping either half alone installs cleanly and then fails at
  # import with "RuntimeError: operator torchvision::nms does not exist".
  #
  # torchaudio and torchcodec declare no torch pin because they are not coupled that
  # way. torchaudio trails the others (its newest release is 2.11.0, there is no 2.13),
  # but it runs fine on torch 2.13 -- forced_align and the MMS_FA bundle, the native
  # ops this repo depends on, both load. It is held at its latest via the uv override
  # below rather than being allowed to drag torch back down to 2.11.
  #
  # To upgrade: bump the set together, then confirm torch.ops.torchvision.nms,
  # torchaudio.functional.forced_align, torchaudio.pipelines.MMS_FA and the torchcodec
  # decoders all load before trusting the resolver, and verify CI passes.
  # ─────────────────────────────────────────────────────────────────────────────
  "torch==2.13.0",
  "torchaudio==2.11.0",
  "torchvision==0.28.0",
  "torchcodec==0.14.0",
  "tqdm",
  "matplotlib",
  "huggingface_hub",
  "transformers",
  "safetensors",
]

[project.optional-dependencies]
audio = [
  "opensmile",
  "torchaudio",
]
text = [
  "transformers",
  "torchaudio",
  "rapidfuzz",
  # whisperX — wav2vec2 forced-alignment backend for word-level timestamps.
  # Pulls the pyannote-audio / faster-whisper / ctranslate2 stack; the torch
  # generation and numpy/pandas/transformers versions are held at the repo pins
  # by the ``override-dependencies`` safety belt in ``[tool.uv]``.
  "whisperx",
]
video = [
  "mediapipe",
  "ultralytics",
  "blinklinmult",
  "unigaze",
  "timm",
  "marlin-pytorch",
  "einops",
]
dev = [
  "ruff",
  "ty",
  "coverage",
  "pre-commit",
  "ipykernel",  # run the example notebooks in examples/
]
docs = [
  "sphinx>=8.0",
  "furo",
  "sphinx-autoapi",
  "sphinx-autobuild",
  "myst-parser",
]
all = [
  "exordium[audio,video,text]",
]

[project.urls]
Documentation = "https://fodorad.github.io/exordium/"
Issues = "https://github.com/fodorad/exordium/issues"
Source = "https://github.com/fodorad/exordium"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["exordium"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "TCH", "ARG", "PIE", "D"]
ignore = [
  "D107",  # Missing docstring in __init__ (covered by class docstring)
  "D203",  # Blank line before class (conflicts with D211)
  "D213",  # Multi-line summary second line (conflicts with D212)
]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["D104"]
"tests/**/test_*.py" = ["D", "S", "ARG"]
"docs/conf.py" = ["D", "ARG"]
"examples/*.ipynb" = ["D", "E501", "E741"]

[tool.coverage.run]
source = ["exordium"]
omit = [
  "*/tests/*",
  "*/__init__.py",
]

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "coverage_html"

[tool.uv]
override-dependencies = [
  "timm>=1.0",  # unigaze pins timm==0.3.2; override it
  # whisperX (and pyannote-audio) declare conservative torch pins (~=2.8) and a
  # requires-python <3.14 upper bound. Empirically whisperx 3.7.2 works fine on
  # this repo's torch / py3.14, so we hold the torch stack at the repo pins and let
  # uv resolve whisperx against them instead of downgrading torch.
  #
  # torchaudio is the reason this block matters most: 2.11.0 is its newest release, so
  # a plain resolve would let it pull torch back to 2.11 and strand torchvision 0.28
  # (which hard-pins torch==2.13). Overriding holds torchaudio at 2.11 on top of torch
  # 2.13, which is verified to work -- see the pin block in [project.dependencies].
  "torch==2.13.0",
  "torchaudio==2.11.0",
  "torchvision==0.28.0",
  "torchcodec==0.14.0",
  # Hold transformers at latest 5.x; the whisperx stack otherwise pulls it down
  # to 4.57. Verified whisperx alignment + the existing wrappers work on 5.x.
  "transformers>=5.5",
  # whisperx 3.7.x caps numpy<2.3 / pandas<2.3, but those have no stable
  # Python 3.14 wheels and ABI-segfault opensmile. Hold them at the repo's
  # working versions; whisperx alignment is verified to work on them.
  "numpy>=2.4",
  "pandas>=3.0",
]

[tool.ty.environment]
python-version = "3.13"
